# responsi-uts-ipbd

./: README.md  docker-compose.yml  main.py  pyproject.toml
dags/: wired_dag.py
data/: articles.csv  articles.json
src/: api.py  scraper.py
