[project]
name = "responsi-uts-ipbd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow>=3.2.0",
    "fastapi>=0.136.0",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "webdriver-manager>=4.0.2",
]
